# Whub-web

./: .env.example  .env.prod  .env.vercel  .gitignore  AUDIT_ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
workers/cv-worker/: README.md  pyproject.toml
workers/cv-worker/eval/: README.md  __init__.py  run_eval.py
workers/cv-worker/renderer/: render_input_amina.json  whub_cv_renderer.py
workers/cv-worker/scripts/: verify_whub_assets.py
workers/cv-worker/src/: ai_layout_planner.py  ai_layout_planner_contract.py  ai_layout_planner_facade.py  block_extraction.py  block_sanitizer.py  config.py  content_blocks.py  content_preserving_pipeline.py  content_preserving_rendering.py  deterministic_layout_planner.py  events.py  extraction.py  layout_intelligence.py  layout_packing.py  layout_plan.py  layout_retry.py  layout_scoring.py  layout_variants.py  main.py  preflight.py  qa.py  quality_report.py  rendering.py  responsive_layout_variants.py  revisions.py  section_classifier.py  skills_intelligence.py  source_coverage.py  source_sanitizer.py  storage.py  structuring.py  supabase_client.py  supabase_rest_client.py  visual_skills_extraction.py
workers/cv-worker/tests/: conftest.py  test_ai_layout_planner.py  test_ai_layout_planner_contract.py  test_block_extraction.py  test_block_sanitizer.py  test_cleanup.py  test_config_content_preserving.py  test_content_blocks.py  test_content_preserving_coverage.py  test_content_preserving_pipeline.py  test_content_preserving_rendering.py  test_deterministic_layout_planner.py  test_main.py  (+56 more)
(+263 files in other folders)
